--- a/Authenticator/Base.lproj/ATCMain.storyboard
+++ b/Authenticator/Base.lproj/ATCMain.storyboard
@@ -911,6 +911,9 @@ DQ
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="scanQRCodeOnScreenAction_:" target="XfG-lQ-9wD" id="QY7-zs-615"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
