--- a/Authenticator/Base.lproj/ATCMain.storyboard
+++ b/Authenticator/Base.lproj/ATCMain.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1708" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1710" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
     </dependencies>
@@ -710,12 +710,43 @@ DQ
                         </connections>
                     </window>
                     <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
+                        <segue destination="qKk-E3-c1J" kind="relationship" relationship="window.shadowedContentViewController" id="BxC-dm-igO"/>
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-411.5" y="805"/>
+        </scene>
+        <!--Main Content View Controller-->
+        <scene sceneID="Ayf-Rn-UIP">
+            <objects>
+                <viewController id="qKk-E3-c1J" customClass="ATCMainContentViewController" sceneMemberID="viewController">
+                    <view key="view" id="FtU-of-P4y" customClass="ATCMainContentView">
+                        <rect key="frame" x="0.0" y="0.0" width="403" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="4aE-Yn-uKf">
+                                <rect key="frame" x="0.0" y="0.0" width="403" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="300" id="ApX-7a-9RE"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="403" id="coa-EJ-zw1"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="XfG-lQ-9wD" kind="embed" id="XG5-9y-5d1"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="4aE-Yn-uKf" firstAttribute="leading" secondItem="FtU-of-P4y" secondAttribute="leading" id="Aqq-eW-Ltt"/>
+                            <constraint firstAttribute="bottom" secondItem="4aE-Yn-uKf" secondAttribute="bottom" id="Zh2-zE-c3F"/>
+                            <constraint firstAttribute="trailing" secondItem="4aE-Yn-uKf" secondAttribute="trailing" id="pED-ZF-caD"/>
+                            <constraint firstItem="4aE-Yn-uKf" firstAttribute="top" secondItem="FtU-of-P4y" secondAttribute="top" id="pox-Tz-Hij"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <customObject id="Uey-bB-UHF" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-833.5" y="1309"/>
         </scene>
         <!--Main Content View Controller-->
         <scene sceneID="hIz-AP-VOD">
@@ -732,7 +763,7 @@ DQ
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="81" rowSizeStyle="automatic" viewBased="YES" id="d6W-DR-s03">
-                                            <rect key="frame" x="0.0" y="0.0" width="424" height="416"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="424" height="0.0"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <animations/>
                                             <size key="intercellSpacing" width="3" height="2"/>
@@ -942,7 +973,7 @@ DQ
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-220" y="1408"/>
+            <point key="canvasLocation" x="-834" y="1879"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="cTr-72-gXx">
@@ -960,7 +991,7 @@ DQ
                 </windowController>
                 <customObject id="n2s-8L-Fje" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="396" y="1408"/>
+            <point key="canvasLocation" x="-834" y="2419"/>
         </scene>
         <!--Secret Key Manually Input View Controller-->
         <scene sceneID="IFD-Gk-JeJ">
@@ -1068,7 +1099,7 @@ Gw
                 </viewController>
                 <customObject id="aZQ-M8-UdW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1173.5" y="939"/>
+            <point key="canvasLocation" x="-264.5" y="2408"/>
         </scene>
     </scenes>
     <resources>
