Introduced several outlets for ATCPasswordSettingViewController class

--- a/Authenticator/ATCPasswordSetting.storyboard
+++ b/Authenticator/ATCPasswordSetting.storyboard
@@ -59,7 +59,7 @@ DQ
                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                         </textField>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e0D-W1-JmY">
+                                        <textField identifier="repeat-field" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e0D-W1-JmY">
                                             <rect key="frame" x="41" y="62" width="48" height="17"/>
                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Repeat" id="cWe-IC-FlB">
                                                 <font key="font" metaFont="system"/>
@@ -67,7 +67,7 @@ DQ
                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                         </textField>
-                                        <secureTextField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7QV-bT-KZt">
+                                        <secureTextField identifier="pssd-field" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7QV-bT-KZt">
                                             <rect key="frame" x="95" y="94" width="219" height="22"/>
                                             <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Required" drawsBackground="YES" usesSingleLineMode="YES" id="Slu-S7-g1R">
                                                 <font key="font" metaFont="system"/>
@@ -95,6 +95,12 @@ Gw
                             </box>
                         </subviews>
                     </view>
+                    <connections>
+                        <outlet property="passwordSecureField" destination="7QV-bT-KZt" id="bSs-9t-Kln"/>
+                        <outlet property="quitButton" destination="6Xm-qN-Oq5" id="IPi-QW-Kuv"/>
+                        <outlet property="repeatSecureField" destination="GEV-4T-NoE" id="SeS-6Y-FS3"/>
+                        <outlet property="setUpButton" destination="kWP-5B-nKF" id="5Dh-xF-0Se"/>
+                    </connections>
                 </viewController>
                 <customObject id="GoG-bD-a4P" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
