Renamed ATCPasswordSettingView with a more suitable name

--- a/Authenticator/ATCPasswordCollection.storyboard
+++ b/Authenticator/ATCPasswordCollection.storyboard
@@ -5,11 +5,11 @@
         <capability name="box content view" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
-        <!--Password Setting View Controller-->
+        <!--Password Collection View Controller-->
         <scene sceneID="akw-qC-Cn2">
             <objects>
-                <viewController id="6v2-5b-PGi" customClass="ATCPasswordSettingViewController" sceneMemberID="viewController">
-                    <view key="view" id="PKd-dH-ad8" customClass="ATCPasswordSettingView">
+                <viewController id="6v2-5b-PGi" customClass="ATCPasswordCollectionViewController" sceneMemberID="viewController">
+                    <view key="view" id="PKd-dH-ad8" customClass="ATCPasswordCollectionView">
                         <rect key="frame" x="0.0" y="0.0" width="377" height="370"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
