Back fucking up

--- a/Authenticator/ATCPasswordCollection.storyboard
+++ b/Authenticator/ATCPasswordCollection.storyboard
@@ -40,16 +40,22 @@ If you are updating from an older version of Authenticator, you are asked to mig
                                                     <string>NSAllRomanInputSourcesLocaleIdentifier</string>
                                                 </allowedInputSourceLocales>
                                             </secureTextFieldCell>
+                                            <connections>
+                                                <outlet property="delegate" destination="6v2-5b-PGi" id="E2F-9j-4SH"/>
+                                            </connections>
                                         </secureTextField>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kWP-5B-nKF">
                                             <rect key="frame" x="232" y="12" width="88" height="32"/>
-                                            <buttonCell key="cell" type="push" title="Set Up" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0Oq-1d-UaI">
+                                            <buttonCell key="cell" type="push" title="Set Up" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0Oq-1d-UaI">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                 <font key="font" metaFont="system"/>
                                                 <string key="keyEquivalent" base64-UTF8="YES">
 DQ
 </string>
                                             </buttonCell>
+                                            <connections>
+                                                <action selector="setUpAction:" target="6v2-5b-PGi" id="dMx-EW-JNK"/>
+                                            </connections>
                                         </button>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kSk-5y-0UB">
                                             <rect key="frame" x="24" y="97" width="65" height="17"/>
@@ -77,6 +83,9 @@ DQ
                                                     <string>NSAllRomanInputSourcesLocaleIdentifier</string>
                                                 </allowedInputSourceLocales>
                                             </secureTextFieldCell>
+                                            <connections>
+                                                <outlet property="delegate" destination="6v2-5b-PGi" id="fI8-L0-AmW"/>
+                                            </connections>
                                         </secureTextField>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Xm-qN-Oq5">
                                             <rect key="frame" x="144" y="12" width="88" height="32"/>
